fixed the spacing

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -11,17 +11,20 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 8px;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
 }
 
 .profile-image {
+  display: flex;
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-shrink: 0;
 }
 
 .logo{
@@ -47,16 +50,23 @@ a {
 
 ul {
   list-style-type: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 .links {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.left-part {
   display: flex;
   gap: 16px;
 }
 
 .right-part {
   display: flex;
-  ;
   gap: 16px;
   align-items: center;
 }
